k8/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: kubes-example
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
              name: api-port
          livenessProbe:
            httpGet:
              port: 8000
              path: /healthcheck
            initialDelaySeconds: 3
            periodSeconds: 3
