k8/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api
spec:
  selector:
    app: api
  ports:
    - port: 8000
      protocol: TCP
