k8/api/ingress.yaml
# TODO is an ingress necessary if you have a service exposing the pod?
# TODO read more into ingress controllers
# TODO: can we not translate 80 -> 8000 over ingress or service?
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: api-ingress
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-api
                port:
                  number: 8000
